[package]
name = "doh-cli"
version = "0.1.0"
edition = "2021"
author  ="Ichika"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
bytes = "1.4.0"
clap = { version = "4.1.13", features = ["derive"] }
reqwest = {version = "0.11.16", features = ["blocking"]}

[dev-dependencies]
predicates = "3.0.2"
assert_cmd = "2.0.10"
